...
                    EmptyView()
                }

                Form {
                    Section {
                        TextField(app.loadString("Please input the Title"), text: $viewModel.title)
                            .accessibility(identifier: "registerqrcodeview_title_text_field")
                    }
                    
                    Section {
                        HStack {
                            Spacer()
                            Image(uiImage: viewModel.qrCodeImage())
...
                                Spacer()
                                Text(app.loadString("Register"))
                                Spacer()
                            }
                        }
                        .disabled(viewModel.isEnableSave == false)
                        .accessibility(identifier: "registerqrcodeview_register_button")
                    }
                }
            }
        }
        .navigationTitle(mode.title)
    }
...
