...
                .onDisappear() {
                    onViewDisappeard()
                }
                .onRotate { orientation in
                    qrCodeScannerView.rotationChange(orientation)
                }
                .accessibility(identifier: "scanqrcodeview_")
            
            VStack {
                VStack {
                    Text(app.loadString("Keep scanning for QR-codes"))
                        .font(.subheadline)
                    Text("")
...
